syntax = "proto3";

package com.pojtinger.felicitas.goISCDHCP;

option go_package = "github.com/pojntfx/go-isc-dhcp/pkg/api/proto/v1";

// DHCPDManager manages dhcp servers.
service DHCPDManager {
  rpc Create(DHCPD) returns (DHCPDManagedId) {};
  rpc List(DHCPDManagerListArgs) returns (DHCPDManagerListReply) {};
  rpc Get(DHCPDManagedId) returns (DHCPDManaged) {};
  rpc Delete(DHCPDManagedId) returns (DHCPDManagedId) {};
}

message DHCPD {
  string Device = 1;
  repeated Subnet Subnets = 2;
}

message Subnet {
  string Network = 1;
  string Netmask = 2;
  string NextServer = 3;
  string Filename = 4;
  string Routers = 5;
  repeated string DomainNameServers = 6;
  Range Range = 7;
}

message Range {
  string Start = 1;
  string End = 2;
}

message DHCPDManaged {
  string Id = 1;
  string Device = 2;
  repeated Subnet Subnets = 3;
}

message DHCPDManagerListArgs {}

message DHCPDManagedId { string Id = 1; }

message DHCPDManagerListReply { repeated DHCPDManaged DHCPDsManaged = 1; }